--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,9 +9,9 @@
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
 
-    <!-- <script type="text/javascript">
+    <script type="text/javascript">
       window.logo = "<%= image_url('twister-logo.png')%>"
-    </script> -->
+    </script>
 
   </head>
 
